Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <div class="form-group">
                 <label>Modelo Escolhido</label>
                 <select id="modelo">
-                    <option value="Fulani Braids">Fulani Braids (R$ 200)</option>
-                    <option value="French Curl">French Curl (R$ 380)</option>
-                    <option value="Knotless Braids">Knotless Braids (R$ 295)</option>
-                    <option value="Boho Nina Curl">Boho Nina Curl (R$ 370)</option>
+                    <option value="Micropigmentação">Micropigmentação (R$ 100)</option>
+                    <option value="Lash Lifting">Lash Lifting(R$ 70)</option>
+                    <option value="Design & Henna">Design & Henna (R$ 40)</option>
+                    
                 </select>
             </div>
             <div class="form-group">
@@ -150,4 +150,5 @@
         document.getElementById('data-select').min = new Date().toISOString().split("T")[0];
     </script>
 </body>
+
 </html>
